--- a/strategies.Rmd
+++ b/strategies.Rmd
@@ -257,8 +257,35 @@ knitr::include_graphics("figures/gen4-2.jpg")
 
 
 # Reward or punish yourself
-## Forest, Flora
-## World’s most dangerous writing app
+## Protect a virtual creature by sticking with your intentions
+To get a little extra push of motivation to use your devices in the way you intended, you can introduce a little extra reward.
+
+One of the most popular apps is [Forest](https://www.forestapp.cc/) which lets you grow virtual trees during focus sessions, that die if you do not stick with your intention.
+
+```{r, out.width="33%"}
+knitr::include_graphics("figures/forest_iphone.png")
+knitr::include_graphics("figures/forest_android.png")
+knitr::include_graphics("figures/forest_chrome.png")
+```
+
+Forest is available for [iOS](https://itunes.apple.com/app/forest-stay-focused-stop-phubbing/id866450515), [Android](https://play.google.com/store/apps/details?id=cc.forestapp), and as a [Chrome extension](https://chrome.google.com/webstore/detail/forest-stay-focused-be-pr/kjacjjdnoddnpbbcjilcajfhhbdhkpgk).
+
+Other tools include [Feed the Goat (Chrome Extension)](https://docs.google.com/spreadsheets/d/1BVBCBOZQY_K7qYmDiSIail07F6D1iDG1OkoFyazb5Y4/edit#gid=777024457) and [Flora (iOS)](https://itunes.apple.com/us/app/flora-focus-study-pomodoro/id1225155794?mt=8&ign-mpt=uo%3D4):
+
+```{r, out.width="50%"}
+knitr::include_graphics("figures/flora.png")
+knitr::include_graphics("figures/feed_goat.png")
+```
+
+## Writing under pressure
+The online tool [The Most Dangerous Writing App](https://www.themostdangerouswritingapp.com) helps you get into the flow of writing by adding pressure:
+You set a target word count or duration of time, begin typing, and if you stop typing for more than a few seconds before you hit the goal, all you have typed is deleted!
+
+```{r}
+knitr::include_graphics("figures/worlds_dangerous.png")
+```
+
+Perfect for simulating the feeling of being so close to a deadline that procrastination is no longer an option.
 
 # Change your digital environment
 ## Go grey-scale
