finish first pass through

--- a/strategies.Rmd
+++ b/strategies.Rmd
@@ -141,7 +141,8 @@ On **Android**, apps such as [Usage Time](https://play.google.com/store/apps/det
 knitr::include_graphics("figures/app_usage.png")
 ```
 
-Google has also begun to provide the same functionality via their [Digital Wellbeing](https://play.google.com/store/apps/details?id=com.google.android.apps.wellbeing&hl=en_GB) app which comes pre-installed on many newer devices:
+Google has also begun to provide the same functionality via their [Digital Wellbeing](https://play.google.com/store/apps/details?id=com.google.android.apps.wellbeing&hl=en_GB) app which comes pre-installed on many newer devices (Settings > Digital Wellbeing):
+
 ```{r}
 knitr::include_graphics("figures/digi_wellbeing.jpeg")
 ```
@@ -285,11 +286,64 @@ You set a target word count or duration of time, begin typing, and if you stop t
 knitr::include_graphics("figures/worlds_dangerous.png")
 ```
 
-Perfect for simulating the feeling of being so close to a deadline that procrastination is no longer an option.
+Perfect for simulating the feeling of being so close to a deadline that procrastination is no longer an option!
 
 # Change your digital environment
-## Go grey-scale
+## Go grey-scale (smartphone)
+A simple way to make your smartphone less distracting is to turn it greyscale when you do not need color.
+
+```{r}
+knitr::include_graphics("figures/greyscale.png")
+```
+
+On iPhone, you can set a triple-tap on the Home button to toggle grey scale on and off:
+- Settings > Accessibility > Accessibility Shortcut > Colour Filters
+
+Newer versions of the Android operating system may include toggle of gray scale in your phone's quick settings.
+
+## Arrange your apps (smartphone)
+Try arranging your apps so that your home screen is minimalistic and simple, and so that the apps you'd like to use less often require a bit more effort to reach.
+
+Limit your first page of apps to only apps you use for quick in-and-out tasks - move the rest of your apps, especially mindless choices, off the first page and into folders.
+
+```{r, out.width="50%"}
+knitr::include_graphics("figures/off_page.png")
+knitr::include_graphics("figures/off_page2.png")
+```
+
 ## Do not disturb during set hours
-## Arrange your apps
+
+Schedule do not disturb, so that during certain hours (e.g. 9pm to 8am) only calls from your favorite contacts go through directly.
+
+```{r}
+knitr::include_graphics("figures/do_not_disturb.png")
+```
+
+*Wind Down* on newer versions of Android also provide this feature, along with the ability to automatically turn your phone greyscale when getting ready for bed.
+
 ## Manage notifications
-## Use full-screen
+Be ruthless about which apps you give the ability to send you notifications.
+
+On iPhone, go to Settings > Notifications and carefully consider which apps should be allowed to disturb you.
+
+On a Mac, newer operating systems also include a Do Not Disturb mode, for when you need to focus without having popups about incoming email etc.:
+
+```{r}
+knitr::include_graphics("figures/do_not_disturb_mac.png")
+```
+
+## Use full-screen (laptop)
+On a laptop, try limiting the amount of information available to you to what you actually need for your task.
+
+On a Mac, one good way of doing this is to use full screen mode to e.g. show have the two tools you need side by side:
+
+```{r, fig.cap="Rather than this..."}
+knitr::include_graphics("figures/full_screen1.png")
+```
+
+
+
+```{r, fig.cap="... try this"}
+knitr::include_graphics("figures/full_screen_2.png")
+```
+
