--- a/environment.Rmd
+++ b/environment.Rmd
@@ -19,11 +19,12 @@ library(knitr)
 ## Go grey-scale (smartphone)
 A simple way to make your smartphone less distracting is to turn it greyscale when you do not need color.
 
-```{r}
+```{r, out.width="40%", fig.align='center'}
 knitr::include_graphics("figures/greyscale.png")
 ```
 
 On iPhone, set a triple-tap on the Home button to toggle grey scale on and off:
+
 - **Settings > Accessibility > Accessibility Shortcut > Colour Filters**
 
 Newer versions of the Android operating system may include a gray scale toggle in your phone's quick settings.
@@ -33,7 +34,7 @@ Arrange your apps so that the home screen is minimalistic and simple, and so tha
 
 For example, limit your first page of apps to only apps you use for quick in-and-out tasks - move the rest of your apps, especially mindless choices, off the first page and into folders.
 
-```{r, out.width="45%"}
+```{r, out.width="45%", fig.align='center'}
 knitr::include_graphics("figures/off_page.png")
 knitr::include_graphics("figures/off_page2.png")
 ```
@@ -41,9 +42,11 @@ knitr::include_graphics("figures/off_page2.png")
 ## Do not disturb during set hours
 Schedule do not disturb, so that during certain hours (e.g. 9pm to 8am) only calls from your favorite contacts go through directly.
 
-```{r}
+```{r, out.width="40%", fig.align='center'}
 knitr::include_graphics("figures/do_not_disturb.png")
 ```
+
+<br>
 
 *Wind Down* on newer versions of Android also provides this feature, as well as the ability to automatically turn your phone greyscale when getting ready for bed.
 
@@ -54,7 +57,7 @@ On **iOS**, go to **Settings > Notifications** and carefully consider which apps
 
 On a **Mac**, newer operating systems also include a Do Not Disturb mode, for when you need to focus without having popups about incoming email etc.:
 
-```{r}
+```{r, out.width="40%", fig.align='center'}
 knitr::include_graphics("figures/do_not_disturb_mac.png")
 ```
 
@@ -63,11 +66,11 @@ On a laptop, try limiting the amount of information available to you to what you
 
 On **Mac**, one way to do this is by using full screen mode to e.g. put two tools you need side by side:
 
-```{r, fig.cap="Rather than this..."}
+```{r, out.width="80%", fig.align='center', fig.cap="Rather than this..."}
 knitr::include_graphics("figures/full_screen1.png")
 ```
 
-```{r, fig.cap="... try this"}
+```{r, out.width="80%", fig.align='center', fig.cap="... try this"}
 knitr::include_graphics("figures/full_screen_2.png")
 ```
 
