--- a/goals.Rmd
+++ b/goals.Rmd
@@ -15,18 +15,19 @@ library(knitr)
 ```
 
 # Advance your goals {.tabset}
-## Make new tabs remind you of your goals
-On **laptop**, you can make new tabs remind you of what you need to do.
+## Use new tabs to remind you of your goals
+On **laptop**, use new tabs to remind you of what you need to do.
 
-For example, use the Chrome extension [Focus](https://chrome.google.com/webstore/detail/focus/paipcheolflniajdfeglfpddafcklepg?hl=gb) to turn new tabs into a todo-list:
+For example, the Chrome extension [Focus](https://chrome.google.com/webstore/detail/focus/paipcheolflniajdfeglfpddafcklepg?hl=gb) turns new tabs into a todo-list:
 
-```{r}
+```{r, out.width="80%", fig.align='center'}
 knitr::include_graphics("figures/focus_tab.png")
 ```
 
 This extension also lets you block distracting websites while you focus on a specific task.
 
 Search through the browser extension stores for a similar extension which might be useful to you:
+
 - [Safari Extensions](https://safari-extensions.apple.com)
 - [Chrome Extensions](https://chrome.google.com/webstore/category/extensions?hl=en)
 - [Firefox Add-Ons](https://addons.mozilla.org/en-GB/firefox/)
@@ -37,26 +38,28 @@ On **laptop**, use new tabs to remind you of the important things in life.
 
 For example, use the Chrome extension [Daily Motivation](https://chrome.google.com/webstore/detail/daily-motivation-motivati/nonnkklkpbokmppgochfdamhihaijdin?hl=gb) to put motivational quotes on new tabs:
 
-```{r}
+```{r, out.width="80%", fig.align='center'}
 knitr::include_graphics("figures/daily_motivation.png")
 ```
 
 Search through the browser extension stores for similar extensions for your browser:
+
 - [Safari Extensions](https://safari-extensions.apple.com)
 - [Chrome Extensions](https://chrome.google.com/webstore/category/extensions?hl=en)
 - [Firefox Add-Ons](https://addons.mozilla.org/en-GB/firefox/)
 
 
 ## Replace Facebook's newsfeed with a todo-list
-On **laptop**, you can also replace Facebook's newsfeed with other content.
+On **laptop**, you can replace Facebook's newsfeed with other content.
 
 For example, use the Chrome extension [Todobook](https://chrome.google.com/webstore/detail/todobook/ihbejplhkeifejcpijadinaicidddbde?hl=gb) to replace Facebook's newsfeed with a todo list.
 
-```{r}
+```{r, out.width="80%", fig.align='center'}
 knitr::include_graphics("figures/todobook.png")
 ```
 
 Search through the browser extension stores for similar extensions for your browser:
+
 - [Safari Extensions](https://safari-extensions.apple.com)
 - [Chrome Extensions](https://chrome.google.com/webstore/category/extensions?hl=en)
 - [Firefox Add-Ons](https://addons.mozilla.org/en-GB/firefox/)
@@ -66,11 +69,12 @@ On **laptop**, automatically redirect yourself away from distracting websites wh
 
 For example, use the Chrome extension [Timewarp](https://chrome.google.com/webstore/detail/timewarp/mmmhadpnjmokjbmgamifipkjddhlfkhi?hl=gb):
 
-```{r}
+```{r, out.width="80%", fig.align='center'}
 knitr::include_graphics("figures/timewarp.png")
 ```
 
 Search through the browser extension stores for similar extensions for your browser:
+
 - [Safari Extensions](https://safari-extensions.apple.com)
 - [Chrome Extensions](https://chrome.google.com/webstore/category/extensions?hl=en)
 - [Firefox Add-Ons](https://addons.mozilla.org/en-GB/firefox/)
